<resources>
    <string name="app_name">DiceRoller</string>
    <string name="roll_label">Roll!</string>
    <string name="change_die_faces_label">Change die type</string>
    <string name="selected_dice">Dice type:</string>
    <string name="tap_roll">Tap roll!</string>
    <string name="one_die_label">Single</string>
    <string name="algebraic_dice_label">Algebraic</string>
    <string name="splash_screen_label">An app by Gabriel Magallanes</string>
    <string name="change_roll_mode_label">Change roll mode</string>
    <string name="apply_label">Apply</string>
    <string name="roll_mode_menu_header">Select roll mode</string>
    <string name="die_faces_menu_header">Select number of faces</string>



    <string-array name="diceTypes_array">
        <item>d4</item>
        <item>d6</item>
        <item>d8</item>
        <item>d10</item>
        <item>d12</item>
        <item>d20</item>
        <item>d100</item>
    </string-array>

    <string name="easter_egg"> an image of the vacuum because my second android app sucks</string>

</resources>
