<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rollModeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <RadioGroup
        android:id="@+id/rollMode_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/singleDieRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/one_die_label"
            android:textAlignment="viewStart"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/algebraicDiceRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/algebraic_dice_label"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="25sp" />
    </RadioGroup>

    <Button
        android:id="@+id/rollModeApply_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/apply_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollMode_radioGroup"
        app:layout_constraintVertical_bias="0.50" />

</androidx.constraintlayout.widget.ConstraintLayout>